--- a/client/src/App.css
+++ b/client/src/App.css
@@ -9,13 +9,12 @@
   position: fixed;
   top: 0;
   left: 0;
-  width: 100vw;
-  height: 100vh;
-  overflow: hidden;
+  width: 100%;
+  height: 100%;
   z-index: -1;
 }
 
-.app-background::before {
+/* .app-background::before {
   content: '';
   position: absolute;
   top: 0;
@@ -24,10 +23,9 @@
   height: 100%;
   background: linear-gradient(270deg, #ffdee6, #eafbc8, #c8f7ef, #edacac);
   background-size: 800% 800%;
-  /* Scale up for a smoother animation */
+   Scale up for a smoother animation 
   animation: pastelGradientAnimation 10s ease infinite;
 }
-
 @keyframes pastelGradientAnimation {
   0% {
     background-position: 0% 20%;
@@ -40,4 +38,4 @@
   100% {
     background-position: 0% 20%;
   }
-}
+} */
